# cookiecutter_template_dbt

./: README.md  cookiecutter.json  runme_dbt.sh
finalcheck/: pyproject.toml
finalcheck/dbt_finalcheck/: dbt_project.yml
finalcheck/docs/source/: conf.py
my_repo/: pyproject.toml
my_repo/docs/source/: api.rst  conf.py
{{cookiecutter.pkg_name}}/: pyproject.toml
{{cookiecutter.pkg_name}}/docs/source/: api.rst  conf.py
