# Write a .toml file that can take input from the call to cookiecutter
# and use it to fill in the template


[project]

name = "finalcheck"

description = "Put your repo description here."

author = "Desmond L Molloy"

email = "dlmolloy97@gmail.com"

readme = "README.md"

license = "MIT"

requires-python = ">=3.6"

[tool.poetry.dependencies]

python = "^3.6"

[tool.poetry.dev-dependencies]

pytest = "^5.2"

pytest-cov = "^2.8"

[tool.poetry.scripts]

finalcheck = "finalcheck.__main__:main"

dependencies = ["pyyaml"]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "myst-parser",
    "myst-nb",
    "sphinx-copybutton",
    "sphinx-autoapi"
]

